# magstab

./: LICENSE  README.md  pyproject.toml
magstab/: __init__.py
magstab/dac/: ad5791.py
magstab/misc/: dac_via_rp_old.py  dac_via_sdp_textual.py
magstab/redpitaya/: control.py  control_old.py
src/magstab/dac/: ad5791.py
src/magstab/redpitaya/: control.py
tests/: pyrpl_test.py  pyrpl_vna_in1_ou1_test.py  pyrpl_vna_test.py  test_noise.py  zzz_20240627.npy  zzz_20240627.txt
